--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon ./src/socket.js",
+    "dev": "nodemon ./src/socket-back-documento.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
